	PR middle-end/17151 	* combine.c (force_to_mode): Remove dubious early return test that 	inhibits further optimization.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@88129 138bc75d-0d04-0410-961f-82ee72b054a4